--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div id="dodger" style="bottom: 0px; left: 180px;"></div>
     </div>
     <script>
-      <script src
+      <script src=
     </script>
   </body>
 </html>
